--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
-    "sql.js": "^1.11.0"
+    "snowflake-sdk": "^1.14.0",
+    "sql.js": "^1.11.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/uuid": "^10.0.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/sql.js": "^1.4.9",
